@@ -45,6 +45,8 @@ Bugfixes:
 - numbers outside integer range are correctly serialized in AMF3 codec
 - return proper error object that triggers "onStatus" for
   "NetConnection.call" in case of errors (Jira APPSERVER-192)
+- fixed endless look in playlist controller with only one item in it
+  (Jira APPSERVER-191)
 
 
 Red5 0.6.2  (2007-06-17)
